# joule

./: .gitignore  README.md  imgui.ini  pyproject.toml  requirements.txt  setup.py
drafts/: curvature.py  decorator_test.py  directional_derivative.py  gen_mesh.py  profiling_test.py
joule/: __main__.py  app.py
joule.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
joule/compute/: calculus.py  linalg.py  mecanics.py  mechanics.py
joule/graphics/: orbit_controls.py  parameter_interface.py  right_handed.py  shader_renderer.py  vbo.py
joule/graphics/elements/: axes.py  ball.py  surface.py  test.py
joule/graphics/shaders/: fragment.glsl  load.py  vertex.glsl
joule/mechanics/: graph.py  parse.py  physics.py
wheels/: imgui-2.0.0-cp311-cp311-win_amd64.whl
