[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "joule"
version = "0.1.0"
requires-python = ">=3.11"
description = "Joule"
authors = [
  {name = "Alex Xia", email = "xtxiatianyi@gmail.com"},
]
readme = "README.md"
license = {text = "MIT License"}
keywords = ["physics", "gravity", "simulation", "force", "application"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Topic :: Multimedia :: Graphics :: 3D Rendering",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Visualization"
]
